--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
         <title>htmlcss-responsive-layout</title>
     </head>
     <body>
-        
+        <!-- HEADER -->
+        <header>
+
+        </header>
+        <!-- FINE HEADER -->
+        <!-- MAIN -->
+        <main>
+
+        </main>
+        <!-- FINE MAIN -->
+        <!-- FOOTER -->
+        <footer>
+            
+        </footer>
+        <!-- FINE FOOTER -->
     </body>
 </html>
