[FEAT] struttura e contenuti header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Responsive Tag -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Font Source Sans Pro -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+        <!-- Font Awesome CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Collegamento a "style.css" -->
         <link rel="stylesheet" href="./css/style.css">
         <title>htmlcss-responsive-layout</title>
@@ -12,7 +18,16 @@
     <body>
         <!-- HEADER -->
         <header>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="header-content">
+                            <img src="./img/logo.png" alt="header-logo">
+                            <i class="fa-solid fa-bars fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
         <!-- FINE HEADER -->
         <!-- MAIN -->
@@ -22,7 +37,7 @@
         <!-- FINE MAIN -->
         <!-- FOOTER -->
         <footer>
-            
+
         </footer>
         <!-- FINE FOOTER -->
     </body>
