--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-100">
+                    <div class="col col-100">
                         <div class="header-content">
                             <img src="./img/logo.png" alt="header-logo">
                             <i class="fa-solid fa-bars fa-xl"></i>
@@ -32,7 +32,27 @@
         <!-- FINE HEADER -->
         <!-- MAIN -->
         <main>
-
+            <section id="first-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="first-section-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="first-section-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="first-section-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="first-section-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="first-section-content"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- FINE MAIN -->
         <!-- FOOTER -->
