[FEAT] struttura main testimonials section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
                     </div>
                 </div>
             </section>
+            <section id="testimonials-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="testimonials-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="testimonials-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="testimonials-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="testimonials-content"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- FINE MAIN -->
         <!-- FOOTER -->
