[FEAT] struttura main benefits section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Responsive Tag -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Font Source Sans Pro -->
+        <!-- Font Ubuntu -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
         <!-- Font Awesome CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Collegamento a "style.css" -->
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </section>
-            <section id="second-section">
+            <section id="second-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -80,6 +80,18 @@
                         <div class="col">
                             <div class="testimonials-content"></div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="benefits-section" class="bgcolor-violet">
+                <div class="container">
+                    <div class="row">
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
                     </div>
                 </div>
             </section>
