[FEAT] struttura benefits content

--- a/index.html
+++ b/index.html
@@ -86,12 +86,24 @@
             <section id="benefits-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="benefits-content"></div>
+                        </div>
                     </div>
                 </div>
             </section>
