--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
                     </div>
                 </div>
             </section>
+            <section id="about-us-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="about-us-content"></div>
+                        </div>
+                        <div class="col">
+                            <div class="about-us-content"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- FINE MAIN -->
         <!-- FOOTER -->
