[FEAT] struttura main get started section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
                     </div>
                 </div>
             </section>
+            <section id="get-started-section" class="bgcolor-violet">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="get-started-content"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- FINE MAIN -->
         <!-- FOOTER -->
