--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
         <!-- FINE MAIN -->
         <!-- FOOTER -->
         <footer>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+            </div>
         </footer>
         <!-- FINE FOOTER -->
     </body>
