--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col"></div>
+                    <div class="col">
+                        <div class="footer-content"></div>
+                    </div>
                 </div>
             </div>
         </footer>
