--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!-- FINE HEADER -->
         <!-- MAIN -->
         <main>
+            <!-- First Section -->
             <section id="first-section">
                 <div class="container">
                     <div class="row">
@@ -53,6 +54,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Second Section -->
             <section id="second-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
@@ -65,6 +67,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Testimonials Section -->
             <section id="testimonials-section">
                 <div class="container">
                     <div class="row">
@@ -83,6 +86,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Benefits Section -->
             <section id="benefits-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
@@ -107,6 +111,7 @@
                     </div>
                 </div>
             </section>
+            <!-- About Us Section -->
             <section id="about-us-section">
                 <div class="container">
                     <div class="row">
@@ -119,6 +124,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Get Started Section -->
             <section id="get-started-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
