[FEAT] contenuti main first section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <!-- HEADER -->
-        <header>
+        <header class="bgcolor-blue">
             <div class="container">
                 <div class="row">
                     <div class="col col-100">
@@ -36,20 +36,50 @@
             <section id="first-section">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <div class="first-section-content"></div>
+                        <div class="col bgcolor-lightblue">
+                            <div class="first-section-content">
+                                <div class="row">
+                                    <div class="col-2">
+                                        <h2 class="txt-blue">Get a demo application</h2>
+                                        <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                        <a href="#" class="txt-white bgcolor-blue">
+                                            <i class="fa-brands fa-apple"></i>
+                                            App Store
+                                        </a>
+                                    </div>
+                                    <div class="col-2">
+                                        <img src="./img/phone.png" alt="first-section-img-1">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="first-section-content"></div>
+                        <div class="col bgcolor-lightblue">
+                            <div class="first-section-content first-section-content-2">
+                                <i class="fa-solid fa-file-code fa-2xl txt-blue"></i>
+                                <h2 class="txt-blue txt-center">Clean Code</h2>
+                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="first-section-content"></div>
+                        <div class="col bgcolor-lightblue">
+                            <div class="first-section-content first-section-content-2">
+                                <i class="fa-solid fa-compass-drafting fa-2xl txt-blue"></i>
+                                <h2 class="txt-blue txt-center">Web Design</h2>
+                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="first-section-content"></div>
+                        <div class="col bgcolor-lightblue">
+                            <div class="first-section-content first-section-content-2">
+                                <i class="fa-solid fa-laptop-code fa-2xl txt-blue"></i>
+                                <h2 class="txt-blue txt-center">Developement</h2>
+                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="first-section-content"></div>
+                        <div class="col bgcolor-lightblue">
+                            <div class="first-section-content first-section-content-2">
+                                <i class="fa-solid fa-bullhorn fa-2xl txt-blue"></i>
+                                <h2 class="txt-blue txt-center">Branding</h2>
+                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
