[FEAT] contenuti main second section

--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
                             </div>
                         </div>
                         <div class="col bgcolor-lightblue">
-                            <div class="first-section-content first-section-content-2">
+                            <div class="first-section-content first-section-content-2 txt-center">
                                 <i class="fa-solid fa-file-code fa-2xl txt-blue"></i>
-                                <h2 class="txt-blue txt-center">Clean Code</h2>
-                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                <h2 class="txt-blue">Clean Code</h2>
+                                <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                             </div>
                         </div>
                         <div class="col bgcolor-lightblue">
-                            <div class="first-section-content first-section-content-2">
+                            <div class="first-section-content first-section-content-2 txt-center">
                                 <i class="fa-solid fa-compass-drafting fa-2xl txt-blue"></i>
-                                <h2 class="txt-blue txt-center">Web Design</h2>
-                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                <h2 class="txt-blue">Web Design</h2>
+                                <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                             </div>
                         </div>
                         <div class="col bgcolor-lightblue">
-                            <div class="first-section-content first-section-content-2">
+                            <div class="first-section-content first-section-content-2 txt-center">
                                 <i class="fa-solid fa-laptop-code fa-2xl txt-blue"></i>
-                                <h2 class="txt-blue txt-center">Developement</h2>
-                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                <h2 class="txt-blue">Developement</h2>
+                                <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                             </div>
                         </div>
                         <div class="col bgcolor-lightblue">
-                            <div class="first-section-content first-section-content-2">
+                            <div class="first-section-content first-section-content-2 txt-center">
                                 <i class="fa-solid fa-bullhorn fa-2xl txt-blue"></i>
-                                <h2 class="txt-blue txt-center">Branding</h2>
-                                <p class="txt-grey txt-center bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                <h2 class="txt-blue">Branding</h2>
+                                <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                             </div>
                         </div>
                     </div>
@@ -89,10 +89,21 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="second-section-content"></div>
+                            <div class="second-section-content">
+                                <img src="./img/planning1.png" alt="planning-photo-1">
+                                <h2 class="txt-white">Strategic Planning</h2>
+                                <p class="txt-white">Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis.</p>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="second-section-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="second-section-content second-section-content-2 txt-center">
+                                <img src="./img/planning2.png" alt="planning-photo-2">
+                                <h3>App developement</h3>
+                                <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                                <a href="#">
+                                    <i class="fa-solid fa-arrow-down-long bgcolor-violet"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
