[FEAT] contenuti main testimonials section

--- a/index.html
+++ b/index.html
@@ -113,16 +113,44 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="testimonials-content"></div>
+                            <div class="testimonials-content txt-center">
+                                <span>TESTIMONIALS</span>
+                                <h2 class="txt-violet">We are committed expert partners</h2>
+                                <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="testimonials-content"></div>
+                        <div class="col bgcolor-violet">
+                            <div class="testimonials-content txt-center">
+                                <div class="testimonials-img testimonials-img-1"></div>
+                                <p class="txt-white">
+                                    <i class="fa-solid fa-quote-left fa-lg txt-white"></i>
+                                    Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin.
+                                    <i class="fa-solid fa-quote-right fa-lg txt-white"></i>
+                                </p>
+                                <h3 class="txt-white">NAT REYNOLDS</h3>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="testimonials-content"></div>
+                        <div class="col bgcolor-violet">
+                            <div class="testimonials-content txt-center">
+                                <div class="testimonials-img testimonials-img-2"></div>
+                                <p class="txt-white">
+                                    <i class="fa-solid fa-quote-left fa-lg txt-white"></i>
+                                    Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent elementum.
+                                    <i class="fa-solid fa-quote-right fa-lg txt-white"></i>
+                                </p>
+                                <h3 class="txt-white">CELIA ALMEDA</h3>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="testimonials-content"></div>
+                        <div class="col bgcolor-violet">
+                            <div class="testimonials-content txt-center">
+                                <div class="testimonials-img testimonials-img-3"></div>
+                                <p class="txt-white">
+                                    <i class="fa-solid fa-quote-left fa-lg txt-white"></i>
+                                    Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin. Nibh nisl condimentum id venenatis a condimentum.
+                                    <i class="fa-solid fa-quote-right fa-lg txt-white"></i>
+                                </p>
+                                <h3 class="txt-white">BOB ROBERTS</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
