[FEAT] contenuti main benefits section

--- a/index.html
+++ b/index.html
@@ -159,23 +159,54 @@
             <section id="benefits-section" class="bgcolor-violet">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <h2 class="txt-white txt-center">Benefits of working with us</h2>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">01</span>
+                                <h3 class="txt-violet">Hight Quality</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">02</span>
+                                <h3 class="txt-violet">Creative Team</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">03</span>
+                                <h3 class="txt-violet">Amazing Results</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">04</span>
+                                <h3 class="txt-violet">Best Pricing</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">05</span>
+                                <h3 class="txt-violet">Innovations</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="benefits-content"></div>
+                        <div class="col bgcolor-white">
+                            <div class="benefits-content">
+                                <span class="txt-violet bold">06</span>
+                                <h3 class="txt-violet">24/7 Support</h3>
+                                <p class="txt-grey">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.</p>
+                                <a href="#" class="txt-white bgcolor-violet bold">more</a>
+                            </div>
                         </div>
                     </div>
                 </div>
