[FEAT] contenuti main about us section

--- a/index.html
+++ b/index.html
@@ -216,10 +216,23 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="about-us-content"></div>
+                            <div class="about-us-content">
+                                <h2 class="txt-violet">About Us</h2>
+                                <p>Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.</p>
+                                <p>Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.</p>
+                            </div>
                         </div>
                         <div class="col">
-                            <div class="about-us-content"></div>
+                            <div class="about-us-content">
+                                <div class="about-us-img">
+                                    <i class="fa-solid fa-quote-left fa-2xl txt-violet"></i>
+                                </div>
+                                <h2 class="txt-violet">I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h2>
+                                <a href="#" class="txt-white bgcolor-violet">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                    Find me on linkedin
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
