--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <div class="row">
                     <div class="col col-100">
                         <div class="header-content">
+                            <!-- Header Logo -->
                             <img src="./img/logo.png" alt="header-logo">
+                            <!-- Header Hamburger -->
                             <i class="fa-solid fa-bars fa-xl"></i>
                         </div>
                     </div>
@@ -42,6 +44,7 @@
                                     <div class="col-2">
                                         <h2 class="txt-blue">Get a demo application</h2>
                                         <p class="txt-grey bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
+                                        <!-- First Section App Store Button -->
                                         <a href="#" class="txt-white bgcolor-blue">
                                             <i class="fa-brands fa-apple"></i>
                                             App Store
@@ -100,6 +103,7 @@
                                 <img src="./img/planning2.png" alt="planning-photo-2">
                                 <h3>App developement</h3>
                                 <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                                <!-- Second Section Button -->
                                 <a href="#">
                                     <i class="fa-solid fa-arrow-down-long bgcolor-violet"></i>
                                 </a>
@@ -218,16 +222,20 @@
                         <div class="col">
                             <div class="about-us-content">
                                 <h2 class="txt-violet">About Us</h2>
+                                <!-- About Us Paragrafo 1 -->
                                 <p>Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.</p>
+                                <!-- About Us Paragrafo 2 -->
                                 <p>Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="about-us-content">
+                                <!-- About Us Image -->
                                 <div class="about-us-img">
                                     <i class="fa-solid fa-quote-left fa-2xl txt-violet"></i>
                                 </div>
                                 <h2 class="txt-violet">I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h2>
+                                <!-- About Us Linkedin Button -->
                                 <a href="#" class="txt-white bgcolor-violet">
                                     <i class="fa-brands fa-linkedin"></i>
                                     Find me on linkedin
@@ -242,7 +250,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="get-started-content"></div>
+                            <div class="get-started-content txt-center">
+                                <span class="txt-lightblue">GET STARTED</span>
+                                <h3 class="txt-white">Simple, Transparent Pricing</h3>
+                                <h2 class="txt-orange">It's Free!</h2>
+                                <p class="txt-white">We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</p>
+                                <!-- Get Started Button -->
+                                <a href="#" class="txt-violet bgcolor-white bold">Get Started</a>
+                                <!-- Privacy Policy -->
+                                <span class="txt-white">
+                                    Copyright 2021 Boolean &#9679; Classe XX &#9679;
+                                    <a href="#" class="txt-white">Privacy policy</a>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
