--- a/index.html
+++ b/index.html
@@ -274,7 +274,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="footer-content"></div>
+                        <div class="footer-content txt-center txt-white">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!</p>
+                            <span>
+                                <a href="#">Lorem ipsum</a>
+                                scelerisque mauris pellentesque
+                                <a href="#">Boolean careers</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
