--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
                 <div class="row">
                     <div class="col">
                         <div class="footer-content txt-center txt-white">
+                            <!-- Footer Paragrafo -->
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!</p>
+                            <!-- Footer Link -->
                             <span>
                                 <a href="#">Lorem ipsum</a>
                                 scelerisque mauris pellentesque
